Update hugo.toml for baseurl

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
-baseurl      = "localhost"
-title        = "My Blog"
+baseurl      = "wecreate.fyi"
+title        = "We Create"
 languageCode = "en-us"
 theme        = "hello-friend-ng"
 paginate     = 10
