feat: Add GoatCounter and favicon refactor: Migrate to ` .Site.Config.Services` for Google Analytics and Disqus, both of which are not used but throw a warning

--- a/hugo.toml
+++ b/hugo.toml
@@ -28,6 +28,9 @@ enableGlobalLanguageMenu = false
 # dateformNum = "2006-01-02"
 # dateformNumTime = "2006-01-02 15:04"
 
+[params.analytics.goatcounter]
+  Code = "wecreate" 
+  Src = "/count.js"
 [params.logo]
   logoMark     = ">"
   logoText     = "WeCreate"
