feat: Update description and member titles

--- a/data/members.yaml
+++ b/data/members.yaml
@@ -1,10 +1,9 @@
 - name: "Michael H."
-  description: "Co-lead"
+  description: "Co-founder / Co-lead"
   image: ""
 - name: "Angad Behl"
-  description: "President and Founder"
+  description: "Founder / Co-lead"
   # image: "angad.jpg"
   link: "https://angad.me"
 - name: "Eli N."
-  description: "Co-lead"
-  image: ""
+  description: "Co-founder / Co-lead"
